Fix footer styling on mobile

--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -11,6 +11,9 @@ footer .row {
 footer p {
 	padding: 10px 0;
 }
+footer p span {
+	white-space: nowrap;
+}
 
 footer a {
 	color: #fff;
